PySQLParser.py
# Generated from PySQL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PySQLParser ( Parser ):

    grammarFileName = "PySQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'+'", "'-'", "'*'", "'/'", "'>'", 
                     "'<'", "'>='", "'<='", "'=='", "'!='", "'('", "')'", 
                     "','", "'if'", "'then'", "'else'", "'for'", "'in'", 
                     "'['", "']'", "'do'", "'while'", "'func'", "'->'", 
                     "'exec'", "':'", "'int'", "'float'", "'string'", "'bool'", 
                     "<INVALID>", "'print'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NEWLINE", "PRINT", "BOOL", "ID", "INT", "FLOAT", 
                      "STRING", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_assign = 2
    RULE_expr = 3
    RULE_printStat = 4
    RULE_ifStat = 5
    RULE_loopStat = 6
    RULE_funcDef = 7
    RULE_paramList = 8
    RULE_type = 9

    ruleNames =  [ "prog", "stat", "assign", "expr", "printStat", "ifStat", 
                   "loopStat", "funcDef", "paramList", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    NEWLINE=32
    PRINT=33
    BOOL=34
    ID=35
    INT=36
    FLOAT=37
    STRING=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PySQLParser.StatContext)
            else:
                return self.getTypedRuleContext(PySQLParser.StatContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PySQLParser.NEWLINE)
            else:
                return self.getToken(PySQLParser.NEWLINE, i)

        def getRuleIndex(self):
            return PySQLParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PySQLParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.stat()
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==32:
                    self.state = 21
                    self.match(PySQLParser.NEWLINE)


                self.state = 26 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 541191344128) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(PySQLParser.AssignContext,0)


        def expr(self):
            return self.getTypedRuleContext(PySQLParser.ExprContext,0)


        def printStat(self):
            return self.getTypedRuleContext(PySQLParser.PrintStatContext,0)


        def ifStat(self):
            return self.getTypedRuleContext(PySQLParser.IfStatContext,0)


        def loopStat(self):
            return self.getTypedRuleContext(PySQLParser.LoopStatContext,0)


        def funcDef(self):
            return self.getTypedRuleContext(PySQLParser.FuncDefContext,0)


        def getRuleIndex(self):
            return PySQLParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = PySQLParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 34
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 29
                self.expr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 30
                self.printStat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 31
                self.ifStat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 32
                self.loopStat()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 33
                self.funcDef()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PySQLParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(PySQLParser.ExprContext,0)


        def getRuleIndex(self):
            return PySQLParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = PySQLParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(PySQLParser.ID)
            self.state = 37
            self.match(PySQLParser.T__0)
            self.state = 38
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token
            self.cmp = None # Token

        def INT(self):
            return self.getToken(PySQLParser.INT, 0)

        def FLOAT(self):
            return self.getToken(PySQLParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(PySQLParser.STRING, 0)

        def BOOL(self):
            return self.getToken(PySQLParser.BOOL, 0)

        def ID(self):
            return self.getToken(PySQLParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PySQLParser.ExprContext)
            else:
                return self.getTypedRuleContext(PySQLParser.ExprContext,i)


        def getRuleIndex(self):
            return PySQLParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PySQLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 41
                self.match(PySQLParser.INT)
                pass

            elif la_ == 2:
                self.state = 42
                self.match(PySQLParser.FLOAT)
                pass

            elif la_ == 3:
                self.state = 43
                self.match(PySQLParser.STRING)
                pass

            elif la_ == 4:
                self.state = 44
                self.match(PySQLParser.BOOL)
                pass

            elif la_ == 5:
                self.state = 45
                self.match(PySQLParser.ID)
                pass

            elif la_ == 6:
                self.state = 46
                self.match(PySQLParser.T__11)
                self.state = 47
                self.expr(0)
                self.state = 48
                self.match(PySQLParser.T__12)
                pass

            elif la_ == 7:
                self.state = 50
                self.match(PySQLParser.ID)
                self.state = 51
                self.match(PySQLParser.T__11)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 532575948800) != 0):
                    self.state = 52
                    self.expr(0)
                    self.state = 57
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==14:
                        self.state = 53
                        self.match(PySQLParser.T__13)
                        self.state = 54
                        self.expr(0)
                        self.state = 59
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 62
                self.match(PySQLParser.T__12)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 73
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 71
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = PySQLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 65
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 66
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 60) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 67
                        self.expr(5)
                        pass

                    elif la_ == 2:
                        localctx = PySQLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 68
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 69
                        localctx.cmp = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4032) != 0)):
                            localctx.cmp = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 70
                        self.expr(4)
                        pass

             
                self.state = 75
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PrintStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PySQLParser.PRINT, 0)

        def expr(self):
            return self.getTypedRuleContext(PySQLParser.ExprContext,0)


        def getRuleIndex(self):
            return PySQLParser.RULE_printStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStat" ):
                listener.enterPrintStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStat" ):
                listener.exitPrintStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStat" ):
                return visitor.visitPrintStat(self)
            else:
                return visitor.visitChildren(self)




    def printStat(self):

        localctx = PySQLParser.PrintStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(PySQLParser.PRINT)
            self.state = 77
            self.match(PySQLParser.T__11)
            self.state = 78
            self.expr(0)
            self.state = 79
            self.match(PySQLParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PySQLParser.ExprContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PySQLParser.StatContext)
            else:
                return self.getTypedRuleContext(PySQLParser.StatContext,i)


        def printStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PySQLParser.PrintStatContext)
            else:
                return self.getTypedRuleContext(PySQLParser.PrintStatContext,i)


        def getRuleIndex(self):
            return PySQLParser.RULE_ifStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)




    def ifStat(self):

        localctx = PySQLParser.IfStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(PySQLParser.T__14)
            self.state = 82
            self.match(PySQLParser.T__11)
            self.state = 83
            self.expr(0)
            self.state = 84
            self.match(PySQLParser.T__12)
            self.state = 85
            self.match(PySQLParser.T__15)
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 86
                self.stat()
                pass

            elif la_ == 2:
                self.state = 87
                self.printStat()
                pass


            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 90
                self.match(PySQLParser.T__16)
                self.state = 93
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 91
                    self.stat()
                    pass

                elif la_ == 2:
                    self.state = 92
                    self.printStat()
                    pass




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PySQLParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PySQLParser.ExprContext)
            else:
                return self.getTypedRuleContext(PySQLParser.ExprContext,i)


        def stat(self):
            return self.getTypedRuleContext(PySQLParser.StatContext,0)


        def getRuleIndex(self):
            return PySQLParser.RULE_loopStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStat" ):
                listener.enterLoopStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStat" ):
                listener.exitLoopStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopStat" ):
                return visitor.visitLoopStat(self)
            else:
                return visitor.visitChildren(self)




    def loopStat(self):

        localctx = PySQLParser.LoopStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_loopStat)
        self._la = 0 # Token type
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(PySQLParser.T__17)
                self.state = 98
                self.match(PySQLParser.T__11)
                self.state = 99
                self.match(PySQLParser.ID)
                self.state = 100
                self.match(PySQLParser.T__18)
                self.state = 101
                self.match(PySQLParser.T__19)
                self.state = 102
                self.expr(0)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 103
                    self.match(PySQLParser.T__13)
                    self.state = 104
                    self.expr(0)
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 110
                self.match(PySQLParser.T__20)
                self.state = 111
                self.match(PySQLParser.T__12)
                self.state = 112
                self.match(PySQLParser.T__21)
                self.state = 113
                self.stat()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(PySQLParser.T__22)
                self.state = 116
                self.match(PySQLParser.T__11)
                self.state = 117
                self.expr(0)
                self.state = 118
                self.match(PySQLParser.T__12)
                self.state = 119
                self.match(PySQLParser.T__21)
                self.state = 120
                self.stat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(PySQLParser.TypeContext,0)


        def paramList(self):
            return self.getTypedRuleContext(PySQLParser.ParamListContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PySQLParser.StatContext)
            else:
                return self.getTypedRuleContext(PySQLParser.StatContext,i)


        def getRuleIndex(self):
            return PySQLParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)




    def funcDef(self):

        localctx = PySQLParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(PySQLParser.T__23)
            self.state = 125
            self.match(PySQLParser.T__11)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 126
                self.paramList()


            self.state = 129
            self.match(PySQLParser.T__12)
            self.state = 130
            self.match(PySQLParser.T__24)
            self.state = 131
            self.type_()
            self.state = 132
            self.match(PySQLParser.T__25)
            self.state = 133
            self.match(PySQLParser.T__11)
            self.state = 135 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 134
                self.stat()
                self.state = 137 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 541191344128) != 0)):
                    break

            self.state = 139
            self.match(PySQLParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PySQLParser.ID)
            else:
                return self.getToken(PySQLParser.ID, i)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PySQLParser.TypeContext)
            else:
                return self.getTypedRuleContext(PySQLParser.TypeContext,i)


        def getRuleIndex(self):
            return PySQLParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = PySQLParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(PySQLParser.ID)
            self.state = 142
            self.match(PySQLParser.T__26)
            self.state = 143
            self.type_()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 144
                self.match(PySQLParser.T__13)
                self.state = 145
                self.match(PySQLParser.ID)
                self.state = 146
                self.match(PySQLParser.T__26)
                self.state = 147
                self.type_()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PySQLParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = PySQLParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4026531840) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[3] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 3)
         




